--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <dependencies>
+        <!--        spring MVC      -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -35,6 +36,7 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.9.RELEASE</version>
         </dependency>
+        <!--        spring Security      -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -50,6 +52,7 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.2.7.RELEASE</version>
         </dependency>
+        <!--      -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
